--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "author": "WingLim",
   "license": "MIT",
+  "engines": {
+    "node": "18.x"
+  },
   "bugs": {
     "url": "https://github.com/WingLim/ddns-telegram-bot/issues"
   },
