--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,6 @@
             "destination": "https://github.com/WingLim/ddns-telegram-bot/blob/main/README.md",
             "permanent": true
         }
-    ]
+    ],
+    "installCommand": "npm install -g pnpm@latest && pnpm install"
 }
